--- a/style.css
+++ b/style.css
@@ -4,8 +4,46 @@
     font-family:'Times New Roman', Times, serif;
 }
 
+body{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+#question{
+    font-size: 90px;
+}
 
-.hide{
-    display:none;
+#timer{
+    height: 90vh;
+    width: 20vw;
+    display: flex;
+    align-items: right;
+    justify-content: right;
+    flex-direction: row;
+}
+
+.btn-grid {
+    display:grid;
+    padding: 10px;
+    gap: 10px;
+}
+
+.btn {
+    background-color: blueviolet;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+}
+
+#start-btn {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+.controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
